--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="first_bar">
-        <a href="#">
+        <a href="index.html">
             <img src="assets/images/logo.png" class="ms-lg-4 ms-3">
         </a>
     </div>
