--- a/organization-details.html
+++ b/organization-details.html
@@ -29,7 +29,7 @@
           <img src="assets/images/logo.png">
         </span>
       </a>
-      <i class="bi bi-list toggle-sidebar-btn"></i>
+      <i class="bi bi-list toggle-sidebar-btn d-xl-none d-block"></i>
     </div><!-- End Logo -->
 
     <nav class="header-nav ms-auto">
@@ -177,43 +177,26 @@
 
   <!-- ======= Sidebar ======= -->
   <aside id="sidebar" class="sidebar">
-
-    <ul class="sidebar-nav" id="sidebar-nav">
-
+    <div onclick="changeIcon(this)" class="d-none d-xl-block">
+      <i class="fa fa-arrow-alt-circle-left textOrange toggle-sidebar-btn2 absoluteBtn fa-lg" ></i>
+    </div>
+    <ul class="sidebar-nav second-sidebar-nav pt-xl-4" id="sidebar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="index.html">
-          <i class="fa fa-home"></i>
-          <span>Home</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="about.html">
-          <i class="fa fa-table"></i>
-          <span>My Space</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="about.html">
-          <i class="fa fa-table"></i>
-          <span>Content Hub</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="about.html">
-          <i class="fa fa-users"></i>
-          <span>My Team</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="about.html">
+        <a class="nav-link active" href="organization.html">
           <i class="fa fa-building"></i>
-          <span>My Company</span>
+          <span>Organization</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link collapsed" href="organization.html">
-          <i class="fa fa-user-cog"></i>
-          <span>Adminstration</span>
+        <a class="nav-link" href="about.html">
+          <i class="fa fa-users"></i>
+          <span>Employees</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="about.html">
+          <i class="fa fa-building"></i>
+          <span>Teams</span>
         </a>
       </li>
       <!-- <li class="nav-item">
@@ -237,7 +220,39 @@
   <main id="main" class="main">
 
     <div class="pagetitle">
-      <h1>Dashboard</h1>
+      <h1 class="text-black">Organization</h1>
+      <p class="py-3 fw-bold textGray">This is your company page.  This is a feed of the most important things you need to know.  Look out for new job vacancies, HR updates, All company announcements.  Also this is where you can link quickly to your dedicated HR platform too</p>
+      <div class="card rounded-4">
+        <div class="card-header border-0">
+          <h1>
+            <span class="textOrange">K</span>inetik 
+            <span class="float-end">
+              <!-- <button class="btn border-0 p-0">
+                <i class="fa fa-pencil-alt textOrange fa-lg"></i>
+              </button> -->
+              <a href="organization-edit.html" class="btn border-0 p-0">
+                <i class="fa fa-pencil-alt textOrange fa-lg"></i>
+              </a>
+            </span>
+          </h1>
+        </div>
+        <div class="card-body pt-3">
+          <h5>Organization Name</h5>
+          <p class="pt-3 fw-bold text-black mb-1">Organization Mission.</p>
+          <p class="fw-normal">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
+          </p>
+          <p class="pt-3 fw-bold text-black mb-1">Organization Vission.</p>
+          <p class="fw-normal">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
+          </p>
+          <p class="pt-3 fw-bold text-black mb-1">Organization Values.</p>
+          <p class="fw-normal">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
+          </p>
+        </div>
+      </div>
+    
     </div><!-- End Page Title -->
 
     <section class="section dashboard">
