--- a/organization.html
+++ b/organization.html
@@ -29,7 +29,7 @@
           <img src="assets/images/logo.png">
         </span>
       </a>
-      <i class="bi bi-list toggle-sidebar-btn"></i>
+      <i class="bi bi-list toggle-sidebar-btn d-xl-none d-block"></i>
     </div><!-- End Logo -->
 
     <nav class="header-nav ms-auto">
@@ -178,42 +178,27 @@
   <!-- ======= Sidebar ======= -->
   <aside id="sidebar" class="sidebar">
 
-    <ul class="sidebar-nav" id="sidebar-nav">
+    <div onclick="changeIcon(this)" class="d-none d-xl-block">
+      <i class="fa fa-arrow-alt-circle-left textOrange toggle-sidebar-btn2 absoluteBtn fa-lg" ></i>
+    </div>
+    <ul class="sidebar-nav second-sidebar-nav pt-xl-4" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link" href="index.html">
-          <i class="fa fa-home"></i>
-          <span>Home</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="about.html">
-          <i class="fa fa-table"></i>
-          <span>My Space</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="about.html">
-          <i class="fa fa-table"></i>
-          <span>Content Hub</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="about.html">
-          <i class="fa fa-users"></i>
-          <span>My Team</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="about.html">
+        <a class="nav-link active" href="organization.html">
           <i class="fa fa-building"></i>
-          <span>My Company</span>
+          <span>Organization</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link collapsed" href="organization.html">
-          <i class="fa fa-user-cog"></i>
-          <span>Adminstration</span>
+        <a class="nav-link" href="organization-edit.html">
+          <i class="fa fa-users"></i>
+          <span>Employees</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="about.html">
+          <i class="fa fa-building"></i>
+          <span>Teams</span>
         </a>
       </li>
       <!-- <li class="nav-item">
@@ -237,7 +222,32 @@
   <main id="main" class="main">
 
     <div class="pagetitle">
-      <h1>Dashboard</h1>
+      <h1 class="text-black">Organization</h1>
+      <p class="pt-3 fw-bold textGray">This is your company page.  This is a feed of the most important things you need to know.  Look out for new job vacancies, HR updates, All company announcements.  Also this is where you can link quickly to your dedicated HR platform too</p>
+      <div class="row">
+        <div class="col-lg-6">
+          <form class="formGeneral" action="#">
+            <div class="mb-3 mt-3">
+              <label for="organization" class="form-label fw-bold textBlack">Organization Name</label>
+              <input type="text" required class="form-control height-42" id="organization" placeholder="Ex :Kinetik" name="organization">
+            </div>
+            <div class="mb-3 mt-3">
+              <label for="mission" class="form-label fw-bold textBlack">Organization Mission</label>
+              <textarea type="text" rows="4" required class="form-control" id="mission" placeholder="Ex :Kinetik" name="mission"></textarea>
+            </div>
+            <div class="mb-3 mt-3">
+              <label for="vision" class="form-label fw-bold textBlack">Organization Vision</label>
+              <textarea type="text" rows="4" required class="form-control" id="vision" placeholder="Ex :Kinetik" name="vision"></textarea>
+            </div>
+            <div class="mb-3 mt-3">
+              <label for="values" class="form-label fw-bold textBlack">Organization Values</label>
+              <textarea type="text" rows="4" required class="form-control" id="values" placeholder="Ex :Kinetik" name="values"></textarea>
+            </div>
+            <button class="btn btnOrange px-5 mt-2">Submit</button>
+          </form>
+        </div>
+      </div>
+    
     </div><!-- End Page Title -->
 
     <section class="section dashboard">
