organization new menu

--- a/index.html
+++ b/index.html
@@ -178,42 +178,24 @@
   <!-- ======= Sidebar ======= -->
   <aside id="sidebar" class="sidebar">
 
-    <ul class="sidebar-nav" id="sidebar-nav">
+    <ul class="sidebar-nav second-sidebar-nav pt-md-2" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link" href="index.html">
-          <i class="fa fa-home"></i>
-          <span>Home</span>
+        <a class="nav-link active" href="organization.html">
+          <img src="assets/images/organizationActive.svg" class="mb-2" alt="">
+          <span>Organization</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link collapsed" href="about.html">
-          <i class="fa fa-table"></i>
-          <span>My Space</span>
+        <a class="nav-link" href="organization-edit.html">
+          <img src="assets/images/employee.svg" alt="">
+          <span>Employees</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link collapsed" href="about.html">
-          <i class="fa fa-table"></i>
-          <span>Content Hub</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="about.html">
-          <i class="fa fa-users"></i>
-          <span>My Team</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="about.html">
-          <i class="fa fa-building"></i>
-          <span>My Company</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="organization.html">
-          <i class="fa fa-user-cog"></i>
-          <span>Adminstration</span>
+        <a class="nav-link" href="about.html">
+          <img src="assets/images/team.svg" alt="">
+          <span>Teams</span>
         </a>
       </li>
       <!-- <li class="nav-item">
