teams and employees

--- a/organization-details.html
+++ b/organization-details.html
@@ -192,13 +192,13 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="organization-edit.html">
+        <a class="nav-link" href="employee.html">
           <img src="assets/images/employee.svg" alt="">
           <span>Employees</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="about.html">
+        <a class="nav-link" href="team.html">
           <img src="assets/images/team.svg" alt="">
           <span>Teams</span>
         </a>
