--- a/employee.html
+++ b/employee.html
@@ -225,11 +225,11 @@
 
     <div class="pagetitle">
       <div class="d-md-flex justify-content-between">
-        <div>
+        <div class="pb-2 pb-md-0">
           <h1 class="text-black">Employees</h1>
           <p class="pt-1 fw-bold textGray">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
         </div>
-        <button class="btn btnOrange px-4" data-bs-toggle="modal" data-bs-target="#modalAdd"><img src="assets/images/plus.png" class="me-2" alt=""> New Employee</button>
+        <button class="btn btn-primary px-4" data-bs-toggle="modal" data-bs-target="#modalAdd"><img src="assets/images/plus.png" class="me-2" alt=""> New Employee</button>
       </div>
 
       <!-- Modal Add -->
@@ -340,7 +340,7 @@
                     </div>
                   </div>
                 </div>
-                <button class="btn btnOrange px-5 mt-4">Submit</button>
+                <button class="btn btn-primary px-5 mt-4">Submit</button>
               </form>
             </div>
           </div>
@@ -350,7 +350,7 @@
     
     </div><!-- End Page Title -->
 
-    <section class="section dashboard">
+    <section class="section dashboard pt-md-0 pt-3">
       <div class="table-responsive tableEmployee border">
         <table class="table table-light mb-0">
           <thead>
@@ -359,7 +359,7 @@
               <th>Email</th>
               <th>Role</th>
               <th>Title</th>
-              <th></th>
+              <th class="tablecelMinWidth"></th>
             </tr>
           </thead>
           <tbody>
