--- a/login.html
+++ b/login.html
@@ -48,7 +48,7 @@
                                 <a href="#" class="textBlak fw-bold">Forget Password ?</a>
                             </p>
                         </div>
-                        <button class="btn btnOrange w-100">Sign in</button>
+                        <button class="btn btn-primary w-100">Sign in</button>
                     </form>
                 </div>
             </div>
