--- a/organization.html
+++ b/organization.html
@@ -255,7 +255,7 @@
               <label for="values" class="form-label fw-bold textBlack">Organization Values</label>
               <textarea type="text" rows="4" required class="form-control" id="values" placeholder="Ex :Kinetik" name="values"></textarea>
             </div>
-            <button class="btn btnOrange px-5 mt-2">Submit</button>
+            <button class="btn btn-primary px-5 mt-2">Submit</button>
           </form>
         </div>
       </div>
