--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
   <!-- ======= Sidebar ======= -->
   <aside id="sidebar" class="sidebar">
 
-    <ul class="sidebar-nav second-sidebar-nav pt-md-2" id="sidebar-nav">
+    <ul class="sidebar-nav  pt-md-2" id="sidebar-nav">
 
       <li class="nav-item">
         <a class="nav-link active" href="organization.html">
