--- a/member.html
+++ b/member.html
@@ -183,7 +183,7 @@
       <i class="fa fa-arrow-alt-circle-left textOrange toggle-sidebar-btn2 absoluteBtn fa-lg" ></i>
     </div> -->
 
-    <ul class="sidebar-nav second-sidebar-nav pt-md-2" id="sidebar-nav">
+    <ul class="sidebar-nav  pt-md-2" id="sidebar-nav">
 
       <li class="nav-item">
         <a class="nav-link" href="organization.html">
