--- a/employee.html
+++ b/employee.html
@@ -262,13 +262,13 @@
                 <div class="row pt-3">
                   <div class="col-lg-6">
                     <div class="mb-2">
-                      <label for="firstname" class="form-label fw-bold textBlack">First Name</label>
+                      <label for="firstname" class="form-label fw-bold text-Black">First Name</label>
                       <input type="text" required class="form-control height-42" id="firstname" placeholder="Ex : John" name="firstname">
                     </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="mb-2">
-                      <label for="lastname" class="form-label fw-bold textBlack">Last Name</label>
+                      <label for="lastname" class="form-label fw-bold text-Black">Last Name</label>
                       <input type="text" required class="form-control height-42" id="lastname" placeholder="Ex : Doe" name="lastname">
                     </div>
                   </div>
@@ -276,13 +276,13 @@
                 <div class="row">
                   <div class="col-lg-6">
                     <div class="mb-2">
-                      <label for="displayname" class="form-label fw-bold textBlack">Display Name</label>
+                      <label for="displayname" class="form-label fw-bold text-Black">Display Name</label>
                       <input type="text" required class="form-control height-42" id="displayname" placeholder="Ex : John Doe" name="displayname">
                     </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="mb-2">
-                      <label for="email" class="form-label fw-bold textBlack">Email</label>
+                      <label for="email" class="form-label fw-bold text-Black">Email</label>
                       <input type="email" required class="form-control height-42" id="email" placeholder="Ex : John Doe@gamil.com" name="email">
                     </div>
                   </div>
@@ -290,13 +290,13 @@
                 <div class="row">
                   <div class="col-lg-6">
                     <div class="mb-2">
-                      <label for="phone" class="form-label fw-bold textBlack">Mobile Phone</label>
+                      <label for="phone" class="form-label fw-bold text-Black">Mobile Phone</label>
                       <input type="tel" required class="form-control height-42" id="phone" placeholder="Ex : 01114205243" name="phone">
                     </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="mb-2">
-                      <label for="job" class="form-label fw-bold textBlack">Job Title</label>
+                      <label for="job" class="form-label fw-bold text-Black">Job Title</label>
                       <input type="text" required class="form-control height-42" id="job" placeholder="Ex : Designer" name="job">
                     </div>
                   </div>
@@ -304,13 +304,13 @@
                 <div class="row">
                   <div class="col-lg-6">
                     <div class="mb-2">
-                      <label for="department" class="form-label fw-bold textBlack">Department</label>
+                      <label for="department" class="form-label fw-bold text-Black">Department</label>
                       <input type="text" required class="form-control height-42" id="department" placeholder="Ex : Kinetik" name="department">
                     </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="mb-2">
-                      <label for="office" class="form-label fw-bold textBlack">Office Location</label>
+                      <label for="office" class="form-label fw-bold text-Black">Office Location</label>
                       <input type="text" required class="form-control height-42" id="office" placeholder="Ex : Egypt" name="office">
                     </div>
                   </div>
@@ -318,7 +318,7 @@
                 <div class="row">
                   <div class="col-lg-6">
                     <div class="mb-2">
-                      <label for="officephone" class="form-label fw-bold textBlack">Office Phone</label>
+                      <label for="officephone" class="form-label fw-bold text-Black">Office Phone</label>
                       <input type="tel" required class="form-control height-42" id="officephone" placeholder="Ex : 01114205243" name="officephone">
                     </div>
                   </div>
