--- a/member.html
+++ b/member.html
@@ -245,7 +245,7 @@
             <div class="modal-body pt-0 px-4">
               <form class="formGeneral" action="team.html">
                 <div class="mb-2">
-                  <label for="leader" class="form-label fw-bold textBlack">Choose Members</label>
+                  <label for="leader" class="form-label fw-bold text-Black">Choose Members</label>
                   <select class="form-select form-control height-42" id="leader" aria-label="Default select example">
                     <option selected>Select</option>
                     <option value="1">One</option>
