style color label

--- a/organization.html
+++ b/organization.html
@@ -240,19 +240,19 @@
               </div>
             </div>
             <div class="mb-3 mt-3">
-              <label for="organization" class="form-label fw-bold text-Black">Organization Name</label>
+              <label for="organization" class="form-label fw-bold text-black">Organization Name</label>
               <input type="text" required class="form-control height-42" id="organization" placeholder="Ex :Kinetik" name="organization">
             </div>
             <div class="mb-3 mt-3">
-              <label for="mission" class="form-label fw-bold text-Black">Organization Mission</label>
+              <label for="mission" class="form-label fw-bold text-black">Organization Mission</label>
               <textarea type="text" rows="4" required class="form-control" id="mission" placeholder="Ex :Kinetik" name="mission"></textarea>
             </div>
             <div class="mb-3 mt-3">
-              <label for="vision" class="form-label fw-bold text-Black">Organization Vision</label>
+              <label for="vision" class="form-label fw-bold text-black">Organization Vision</label>
               <textarea type="text" rows="4" required class="form-control" id="vision" placeholder="Ex :Kinetik" name="vision"></textarea>
             </div>
             <div class="mb-3 mt-3">
-              <label for="values" class="form-label fw-bold text-Black">Organization Values</label>
+              <label for="values" class="form-label fw-bold text-black">Organization Values</label>
               <textarea type="text" rows="4" required class="form-control" id="values" placeholder="Ex :Kinetik" name="values"></textarea>
             </div>
             <button class="btn btn-primary px-5 mt-2">Submit</button>
