--- a/team.html
+++ b/team.html
@@ -247,13 +247,13 @@
                 <div class="row pt-3">
                   <div class="col-lg-6">
                     <div class="mb-2">
-                      <label for="teamname" class="form-label fw-bold text-Black">Team Name</label>
+                      <label for="teamname" class="form-label fw-bold text-black">Team Name</label>
                       <input type="text" required class="form-control height-42" id="teamname" placeholder="Ex : John" name="firstname">
                     </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="mb-2">
-                      <label for="mission" class="form-label fw-bold text-Black">Team Mission</label>
+                      <label for="mission" class="form-label fw-bold text-black">Team Mission</label>
                       <input type="text" required class="form-control height-42" id="mission" placeholder="Ex : Doe" name="lastname">
                     </div>
                   </div>
@@ -261,7 +261,7 @@
                 <div class="row">
                   <div class="col-lg-6">
                     <div class="mb-2">
-                      <label for="leader" class="form-label fw-bold text-Black">Leader</label>
+                      <label for="leader" class="form-label fw-bold text-black">Leader</label>
                       <select class="form-select form-control height-42" id="leader" aria-label="Default select example">
                         <option selected>Select</option>
                         <option value="1">One</option>
@@ -272,7 +272,7 @@
                   </div>
                   <div class="col-lg-6">
                     <div class="mb-2">
-                      <label for="vision" class="form-label fw-bold text-Black">Team Vision</label>
+                      <label for="vision" class="form-label fw-bold text-black">Team Vision</label>
                       <input type="text" required class="form-control height-42" id="vision" placeholder="Ex : Vision" name="vision">
                     </div>
                   </div>
@@ -299,7 +299,7 @@
                   </div>
                   <div class="col-lg-6">
                     <div class="mb-2">
-                      <label for="values" class="form-label fw-bold text-Black">Team Values</label>
+                      <label for="values" class="form-label fw-bold text-black">Team Values</label>
                       <input type="text" required class="form-control height-42" id="values" placeholder="Ex : Designer" name="values">
                     </div>
                   </div>
