--- a/team.html
+++ b/team.html
@@ -248,13 +248,13 @@
                   <div class="col-lg-6">
                     <div class="mb-2">
                       <label for="teamname" class="form-label fw-bold text-black">Team Name</label>
-                      <input type="text" required class="form-control height-42" id="teamname" placeholder="Ex : John" name="firstname">
+                      <input type="text" required class="form-control " id="teamname" placeholder="Ex : John" name="firstname">
                     </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="mb-2">
                       <label for="mission" class="form-label fw-bold text-black">Team Mission</label>
-                      <input type="text" required class="form-control height-42" id="mission" placeholder="Ex : Doe" name="lastname">
+                      <input type="text" required class="form-control " id="mission" placeholder="Ex : Doe" name="lastname">
                     </div>
                   </div>
                 </div>
@@ -262,7 +262,7 @@
                   <div class="col-lg-6">
                     <div class="mb-2">
                       <label for="leader" class="form-label fw-bold text-black">Leader</label>
-                      <select class="form-select form-control height-42" id="leader" aria-label="Default select example">
+                      <select class="form-select form-control " id="leader" aria-label="Default select example">
                         <option selected>Select</option>
                         <option value="1">One</option>
                         <option value="2">Two</option>
@@ -273,7 +273,7 @@
                   <div class="col-lg-6">
                     <div class="mb-2">
                       <label for="vision" class="form-label fw-bold text-black">Team Vision</label>
-                      <input type="text" required class="form-control height-42" id="vision" placeholder="Ex : Vision" name="vision">
+                      <input type="text" required class="form-control " id="vision" placeholder="Ex : Vision" name="vision">
                     </div>
                   </div>
                 </div>
@@ -283,14 +283,14 @@
                       <label class="form-label">Type</label>
                       <div class="d-flex">
                         <div class="form-check pe-4">
-                          <input class="form-check-input" type="radio" name="radioRole" id="leader" checked>
-                          <label class="form-check-label" for="leader">
+                          <input class="form-check-input" type="radio" name="radioRole" id="primary" checked>
+                          <label class="form-check-label" for="primary">
                             Primary
                           </label>
                         </div>
                         <div class="form-check">
-                          <input class="form-check-input" type="radio" name="radioRole" id="employee">
-                          <label class="form-check-label" for="employee">
+                          <input class="form-check-input" type="radio" name="radioRole" id="secondary">
+                          <label class="form-check-label" for="secondary">
                             Secondary
                           </label>
                         </div>
@@ -300,7 +300,7 @@
                   <div class="col-lg-6">
                     <div class="mb-2">
                       <label for="values" class="form-label fw-bold text-black">Team Values</label>
-                      <input type="text" required class="form-control height-42" id="values" placeholder="Ex : Designer" name="values">
+                      <input type="text" required class="form-control " id="values" placeholder="Ex : Designer" name="values">
                     </div>
                   </div>
                 </div>
