--- a/employee.html
+++ b/employee.html
@@ -263,13 +263,13 @@
                   <div class="col-lg-6">
                     <div class="mb-2">
                       <label for="firstname" class="form-label fw-bold text-black">First Name</label>
-                      <input type="text" required class="form-control height-42" id="firstname" placeholder="Ex : John" name="firstname">
+                      <input type="text" required class="form-control " id="firstname" placeholder="Ex : John" name="firstname">
                     </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="mb-2">
                       <label for="lastname" class="form-label fw-bold text-black">Last Name</label>
-                      <input type="text" required class="form-control height-42" id="lastname" placeholder="Ex : Doe" name="lastname">
+                      <input type="text" required class="form-control " id="lastname" placeholder="Ex : Doe" name="lastname">
                     </div>
                   </div>
                 </div>
@@ -277,13 +277,13 @@
                   <div class="col-lg-6">
                     <div class="mb-2">
                       <label for="displayname" class="form-label fw-bold text-black">Display Name</label>
-                      <input type="text" required class="form-control height-42" id="displayname" placeholder="Ex : John Doe" name="displayname">
+                      <input type="text" required class="form-control " id="displayname" placeholder="Ex : John Doe" name="displayname">
                     </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="mb-2">
                       <label for="email" class="form-label fw-bold text-black">Email</label>
-                      <input type="email" required class="form-control height-42" id="email" placeholder="Ex : John Doe@gamil.com" name="email">
+                      <input type="email" required class="form-control " id="email" placeholder="Ex : John Doe@gamil.com" name="email">
                     </div>
                   </div>
                 </div>
@@ -291,13 +291,13 @@
                   <div class="col-lg-6">
                     <div class="mb-2">
                       <label for="phone" class="form-label fw-bold text-black">Mobile Phone</label>
-                      <input type="tel" required class="form-control height-42" id="phone" placeholder="Ex : 01114205243" name="phone">
+                      <input type="tel" required class="form-control " id="phone" placeholder="Ex : 01114205243" name="phone">
                     </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="mb-2">
                       <label for="job" class="form-label fw-bold text-black">Job Title</label>
-                      <input type="text" required class="form-control height-42" id="job" placeholder="Ex : Designer" name="job">
+                      <input type="text" required class="form-control " id="job" placeholder="Ex : Designer" name="job">
                     </div>
                   </div>
                 </div>
@@ -305,13 +305,13 @@
                   <div class="col-lg-6">
                     <div class="mb-2">
                       <label for="department" class="form-label fw-bold text-black">Department</label>
-                      <input type="text" required class="form-control height-42" id="department" placeholder="Ex : Kinetik" name="department">
+                      <input type="text" required class="form-control " id="department" placeholder="Ex : Kinetik" name="department">
                     </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="mb-2">
                       <label for="office" class="form-label fw-bold text-black">Office Location</label>
-                      <input type="text" required class="form-control height-42" id="office" placeholder="Ex : Egypt" name="office">
+                      <input type="text" required class="form-control " id="office" placeholder="Ex : Egypt" name="office">
                     </div>
                   </div>
                 </div>
@@ -319,7 +319,7 @@
                   <div class="col-lg-6">
                     <div class="mb-2">
                       <label for="officephone" class="form-label fw-bold text-black">Office Phone</label>
-                      <input type="tel" required class="form-control height-42" id="officephone" placeholder="Ex : 01114205243" name="officephone">
+                      <input type="tel" required class="form-control " id="officephone" placeholder="Ex : 01114205243" name="officephone">
                     </div>
                   </div>
                   <div class="col-lg-6">
