--- a/login.html
+++ b/login.html
@@ -29,11 +29,11 @@
                     <form class="formGeneral" action="#">
                         <div class="mb-3 mt-3">
                             <label for="username" class="form-label fw-bold text-black">User Name</label>
-                            <input type="text" required class="form-control height-42" id="username" placeholder="Ex :John Doe" name="username">
+                            <input type="text" required class="form-control " id="username" placeholder="Ex :John Doe" name="username">
                         </div>
                         <label for="pwd" class="form-label fw-bold text-black">Password</label>
                         <div class="input-group mb-3">
-                            <input type="password" required class="form-control height-42 border-end-0" id="txtPassword" placeholder="Enter password" name="password">
+                            <input type="password" required class="form-control  border-end-0" id="txtPassword" placeholder="Enter password" name="password">
                             <span class="input-group-text bg-white"><i id="toggle_pwd" class="fa fa-eye field_icon textOrange"></i></span>
                         </div>
                         <div class="mb-3">
