--- a/member.html
+++ b/member.html
@@ -246,14 +246,14 @@
               <form class="formGeneral" action="team.html">
                 <div class="mb-2">
                   <label for="leader" class="form-label fw-bold text-black">Choose Members</label>
-                  <select class="form-select form-control height-42" id="leader" aria-label="Default select example">
+                  <select class="form-select form-control " id="leader" aria-label="Default select example">
                     <option selected>Select</option>
                     <option value="1">One</option>
                     <option value="2">Two</option>
                     <option value="3">Three</option>
                   </select>
                 </div>
-                <button class="btn btn-primary px-5 mt-4 height-42">Add</button>
+                <button class="btn btn-primary px-5 mt-4 ">Add</button>
               </form>
             </div>
           </div>
