--- a/organization-edit.html
+++ b/organization-edit.html
@@ -232,7 +232,7 @@
           <form class="formGeneral" action="#">
             <div class="mb-3 mt-3">
               <label for="organization" class="form-label fw-bold text-black">Organization Name</label>
-              <input type="text" required class="form-control height-42" id="organization" placeholder="Ex :Kinetik" name="organization">
+              <input type="text" required class="form-control " id="organization" placeholder="Ex :Kinetik" name="organization">
             </div>
             <div class="mb-3 mt-3">
               <label for="mission" class="form-label fw-bold text-black">Organization Mission</label>
